# exeray

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/exeray/: arena.hpp  engine.hpp  ffi.hpp  logging.hpp  thread_pool.hpp  types.hpp
core/include/exeray/etw/: consumer.hpp  event_ids.hpp  parser.hpp  parser_utils.hpp  provider_mapping.hpp  session.hpp  tdh_parser.hpp
core/include/exeray/etw/providers/: guids.hpp
core/include/exeray/etw/tdh/: converters.hpp  internal.hpp  parser.hpp  schema_cache.hpp
core/include/exeray/event/: correlator.hpp  graph.hpp  node.hpp  payload.hpp  string_pool.hpp  types.hpp
core/include/exeray/event/payloads/: all.hpp  amsi.hpp  clr.hpp  dns.hpp  file.hpp  image.hpp  input.hpp  memory.hpp  network.hpp  process.hpp  registry.hpp  scheduler.hpp  script.hpp  security.hpp  service.hpp  thread.hpp  wmi.hpp
core/include/exeray/event/types/: aliases.hpp  category.hpp  static_asserts.hpp  status.hpp
core/include/exeray/event/types/operations/: all.hpp  amsi.hpp  clr.hpp  dns.hpp  file.hpp  image.hpp  input.hpp  memory.hpp  network.hpp  process.hpp  registry.hpp  scheduler.hpp  script.hpp  security.hpp  service.hpp  thread.hpp  wmi.hpp
core/include/exeray/platform/: guid.hpp
core/include/exeray/process/: controller.hpp
core/src/: engine.cpp  logging.cpp  stub.cpp
core/src/engine/: constructor.cpp  control.cpp  correlation.cpp  etw_thread.cpp  legacy_api.cpp  monitoring.cpp  provider_config.cpp  provider_mapping.cpp  provider_mapping.hpp
core/src/etw/: consumer.cpp  parser_amsi.cpp  parser_clr.cpp  parser_dispatch.cpp  parser_dns.cpp  parser_file.cpp  parser_image.cpp  parser_memory.cpp  parser_network.cpp  parser_powershell.cpp  parser_process.cpp  parser_registry.cpp  parser_security.cpp  parser_thread.cpp  parser_wmi.cpp  session.cpp  tdh_parser.cpp
core/src/etw/parsers/clr/: assembly_parser.cpp  assembly_parser.hpp  constants.hpp  detection.cpp  detection.hpp  dispatcher.cpp  helpers.cpp  helpers.hpp  jit_parser.cpp  jit_parser.hpp
core/src/etw/parsers/dns/: constants.hpp  dga_detector.cpp  dga_detector.hpp  dispatcher.cpp  helpers.cpp  helpers.hpp  query_parser.cpp  query_parser.hpp
core/src/etw/parsers/security/: brute_force_tracker.cpp  brute_force_tracker.hpp  constants.hpp  dispatcher.cpp  helpers.cpp  helpers.hpp  logon.cpp  process_audit.cpp  service.cpp  token.cpp
core/src/etw/parsers/wmi/: constants.hpp  detection.cpp  detection.hpp  dispatcher.cpp  helpers.cpp  helpers.hpp  parser.cpp  parser.hpp
core/src/etw/providers/: guids.cpp  mapping.cpp
core/src/etw/session/: factory.cpp  helpers.cpp  helpers.hpp  provider_ctrl.cpp  session.cpp
core/src/etw/tdh/: parser.cpp  property_extractor.cpp  property_helpers.cpp  schema_cache.cpp  value_getters.cpp
core/src/etw/tdh/converters/: amsi.cpp  clr.cpp  dns.cpp  file.cpp  image.cpp  memory.cpp  network.cpp  process.cpp  registry.cpp  script.cpp  security.cpp  thread.cpp  wmi.cpp
core/src/event/: correlator.cpp  graph.cpp  string_pool.cpp
core/src/process/: controller.cpp
core/tests/: CMakeLists.txt  graph_test.cpp  string_pool_test.cpp
core/tests/unit/: arena_test.cpp  correlator_test.cpp  event_graph_test.cpp  string_pool_test.cpp
core/tests/unit/arena/: arena_alignment_test.cpp  arena_basic_test.cpp  arena_capacity_test.cpp  arena_concurrent_test.cpp  arena_edge_cases_test.cpp  arena_memory_test.cpp  arena_overflow_test.cpp  arena_reset_test.cpp  arena_test_common.hpp
core/tests/unit/correlator/: correlator_concurrent_test.cpp  correlator_correlation_id_test.cpp  correlator_edge_cases_test.cpp  correlator_parent_lookup_test.cpp  correlator_registration_test.cpp  correlator_test_common.hpp
core/tests/unit/etw/: file_parser_test.cpp  process_parser_test.cpp
core/tests/unit/etw/amsi_parser/: amsi_parser_test.cpp  amsi_parser_test_common.hpp
core/tests/unit/etw/dns_parser/: dns_parser_test.cpp  dns_parser_test_common.hpp
core/tests/unit/etw/file_parser/: file_parser_create_test.cpp  file_parser_invalid_test.cpp  file_parser_pointer_test.cpp  file_parser_readwrite_test.cpp  file_parser_test_common.hpp  file_parser_unicode_test.cpp
core/tests/unit/etw/image_parser/: image_parser_test.cpp  image_parser_test_common.hpp
core/tests/unit/etw/memory_parser/: memory_parser_test.cpp  memory_parser_test_common.hpp
core/tests/unit/etw/network_parser/: network_parser_test.cpp  network_parser_test_common.hpp
core/tests/unit/etw/powershell_parser/: powershell_parser_test.cpp  powershell_parser_test_common.hpp
core/tests/unit/etw/process_parser/: process_parser_basic_test.cpp  process_parser_boundary_test.cpp  process_parser_dispatch_test.cpp  process_parser_null_input_test.cpp  process_parser_sid_test.cpp  process_parser_string_test.cpp  process_parser_stringpool_test.cpp  process_parser_test_common.hpp
core/tests/unit/etw/registry_parser/: registry_parser_defaults_test.cpp  registry_parser_invalid_test.cpp  registry_parser_key_test.cpp  registry_parser_ntstatus_test.cpp  registry_parser_pointer_test.cpp  registry_parser_test_common.hpp  registry_parser_value_test.cpp
core/tests/unit/etw/thread_parser/: thread_parser_test.cpp  thread_parser_test_common.hpp
core/tests/unit/event_graph/: event_graph_basic_test.cpp  event_graph_capacity_test.cpp  event_graph_category_test.cpp  event_graph_concurrent_test.cpp  event_graph_correlation_test.cpp  event_graph_edge_cases_test.cpp  event_graph_index_test.cpp  event_graph_iteration_test.cpp  event_graph_parent_child_test.cpp  event_graph_string_test.cpp  event_graph_test_common.hpp
core/tests/unit/string_pool/: string_pool_basic_test.cpp  string_pool_concurrent_test.cpp  string_pool_dedup_test.cpp  string_pool_exhaustion_test.cpp  string_pool_get_test.cpp  string_pool_metrics_test.cpp  string_pool_special_strings_test.cpp  string_pool_test_common.hpp  string_pool_unicode_test.cpp  string_pool_wide_test.cpp
crates/exeray/: Cargo.toml
crates/exeray-ffi/: Cargo.toml  build.rs
crates/exeray-ffi/src/: event.rs  event_iter.rs  lib.rs  tests.rs  (+1 more)
(+7 files in other folders)
