[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
cxx = "1.0"
crossterm = "0.28"
ratatui = "0.29"
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
